feat(timetree): complete implementation of Sprint 10 with offline queues, duplicate message detection, rate limiting, presence tracking, metrics, and passing integration and load tests